k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: my-registry.azurecr.io/react-app:<build-id>
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
