k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  selector:
    app: react-app
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: LoadBalancer
